# cmake-examples

cmake-library/: CMakeLists.txt  Config.cmake.in
cmake-library/src/: useful.cpp  useful.h
